a sketchy z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,6 @@
 	transform: rotateX(50deg) rotateY(0deg) rotateZ(-50deg);
   box-shadow: -3px 3px 0 #E95420, -6px 6px 0 #E95420, -9px 9px 0 #E95420, -12px 12px 0 #E95420, -14px 10px 20px #666;
 	transition: all 0.5s ease;
-	z-index: 10;
 }
 
 .layered-cards:hover > div:hover {
@@ -47,5 +46,5 @@
 	transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg);
 	box-shadow: 0 0 0 0 #E95420;
 	transition: all 0.5s ease;
-	z-index: 999;
+	z-index: 999 !important;
 }
